# pympg

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml
pympg/: cli.py
