[tool.poetry]
name = "pympg"
version = "0.0.6"
description = "Command-line multipurpose generator."
authors = [
    "Theo Paris <theoparisdesigns@gmail.com>",
    "OnyxCode <me@onyxcode.net>"
]
license = "MIT"
exclude = ["data", "*.conf", ".vscode", ".github", "build.sh"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.6,<3.10"
questionary = "^1.9.0"

[tool.poetry.dev-dependencies]
poethepoet = "^0.9.0"
black = "^20.8b1"

[tool.poetry.scripts]
pympg = "pympg.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
format = "black pympg"

[tool.black]
line-length = 80
